--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -7,4 +7,9 @@
     <string name="navigation_play_txv">Play</string>
     <string name="navigation_history_txv">History</string>
 
+    <!-- 임시 단위 -->
+    <string name="rh_mass">%dkg</string>
+    <string name="rh_set">%dset</string>
+    <string name="rh_interval">%ds</string>
+
 </resources>
