--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -14,4 +14,14 @@
 
     <string name="fHome_list_unavailable">데이터가 없습니다.</string>
 
+    <string name="fAddition_part_txv">부위:</string>
+    <string name="fAddition_name_txv">이름:</string>
+    <string name="fAddition_name_hint_txv">운동 이름을 입력하세요.</string>
+    <string name="fAddition_mass_txv">중량:</string>
+    <string name="fAddition_mass_hint_txv">중량을 입력하세요(맨몸 운동은 0)</string>
+    <string name="fAddition_set_txv">세트:</string>
+    <string name="fAddition_set_hint_txv">운동 세트 수를 입력하세요</string>
+    <string name="fAddition_interval_txv">휴식:</string>
+    <string name="fAddition_interval_hint_txv">운동간 휴식 시간을 입력하세요</string>
+
 </resources>
