--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -13,6 +13,12 @@
     <string name="rvExerciseItem_interval">%ds</string>
 
     <string name="fHome_list_unavailable">데이터가 없습니다.</string>
+    <string name="fHome_title_part_txv">부위</string>
+    <string name="fHome_title_name_txv">이름</string>
+    <string name="fHome_title_mass_txv">중량</string>
+    <string name="fHome_title_rep_txv">횟수</string>
+    <string name="fHome_title_set_txv">세트</string>
+    <string name="fHome_title_interval_txv">휴식</string>
 
     <string name="fAddition_part_txv">부위:</string>
     <string name="fAddition_name_txv">이름:</string>
