--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="rvExerciseItem_set">%dset</string>
     <string name="rvExerciseItem_interval">%ds</string>
 
+    <string name="fHome_fragment_name">HomeFragment</string>
     <string name="fHome_list_unavailable">데이터가 없습니다.</string>
     <string name="fHome_title_part_txv">부위</string>
     <string name="fHome_title_name_txv">이름</string>
@@ -31,6 +32,12 @@
     <string name="fAddition_set_hint_txv">운동 세트 수를 입력하세요</string>
     <string name="fAddition_interval_txv">휴식:</string>
     <string name="fAddition_interval_hint_txv">운동간 휴식 시간을 입력하세요</string>
+
+    <string name="fPlayPopup_continue_btn_txv">Continue</string>
+    <string name="fPlayPopup_title_checkbox_txv">여부</string>
+    <string name="fPlayPopup_list_unavailable">데이터가 없습니다.</string>
+    <string name="fPlayPopup_timer_txv">Timer</string>
+    <string name="fPlayPopup_set_txv">%d\/%dset</string>
 
     <string name="rh_mass">%dkg</string>
     <string name="rh_set">%dset</string>
