--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="rvExerciseItem_mass">%dkg</string>
     <string name="rvExerciseItem_set">%dset</string>
     <string name="rvExerciseItem_interval">%ds</string>
+    <string name="rvExerciseItem_slash">/</string>
 
     <string name="fHome_fragment_name">HomeFragment</string>
     <string name="fHome_list_unavailable">데이터가 없습니다.</string>
