--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -24,7 +24,8 @@
     <string name="fHome_title_set_txv">세트</string>
     <string name="fHome_title_interval_txv">휴식</string>
 
-    <string name="fAddition_title_txv">추가화면</string>
+    <string name="fAddition_title_addition_txv">추가화면</string>
+    <string name="fAddition_title_edit_txv">편집화면</string>
     <string name="fAddition_part_txv">부위:</string>
     <string name="fAddition_name_txv">이름:</string>
     <string name="fAddition_name_hint_txv"><b>운동 이름</b></string>
@@ -36,6 +37,10 @@
     <string name="fAddition_set_hint_txv">운동 세트 수를 입력하세요</string>
     <string name="fAddition_interval_txv">휴식</string>
     <string name="fAddition_interval_hint_txv">운동간 휴식 시간을 입력하세요</string>
+
+    <string name="dRemove_remove_txv">이 운동을 지우시겠습니까?</string>
+    <string name="dRemove_confirm_txv">확인</string>
+    <string name="dRemove_cancel_txv">취소</string>
 
     <string name="fPlayPopup_continue_btn_txv">Continue</string>
     <string name="fPlayPopup_title_checkbox_txv">여부</string>
