--- a/Pacemaker/app/src/main/res/values-ko/strings.xml
+++ b/Pacemaker/app/src/main/res/values-ko/strings.xml
@@ -3,14 +3,14 @@
     <string name="title_activity_pacemaker">PacemakerActivity</string>
     <string name="image_not_found">이미지가 없습니다.</string>
 
-    <string name="navigation_home_txv">Home</string>
-    <string name="navigation_play_txv">Play</string>
-    <string name="navigation_history_txv">History</string>
+    <string name="navigation_tv_home_str">Home</string>
+    <string name="navigation_tv_play_str">Play</string>
+    <string name="navigation_tv_history_str">History</string>
 
-    <string name="aPacemaker_title_txv">내 트레이닝</string>
-    <string name="fHistory_title_txv">기록</string>
-    <string name="aHistoryDetail_title_txv">%s월 %s일</string>
-    <string name="aOption_title_txv">옵션</string>
+    <string name="apacemaker_tv_title_str">내 트레이닝</string>
+    <string name="fhistory_tv_title_str">기록</string>
+    <string name="ahistorydetail_tv_title_str">%s월 %s일</string>
+    <string name="aoption_tv_title_str">옵션</string>
 
     <!-- 임시 단위 -->
     <string name="rvExerciseItem_mass">%dkg</string>
@@ -18,89 +18,105 @@
     <string name="rvExerciseItem_interval">%ds</string>
     <string name="rvExerciseItem_slash">/</string>
 
-    <string name="fHome_fragment_name">HomeFragment</string>
-    <string name="fHome_list_unavailable">데이터가 없습니다.</string>
-    <string name="fHome_title_part_txv">부위</string>
-    <string name="fHome_title_name_txv">이름</string>
-    <string name="fHome_title_mass_txv">중량</string>
-    <string name="fHome_title_rep_txv">횟수</string>
-    <string name="fHome_title_set_txv">세트</string>
-    <string name="fHome_title_interval_txv">휴식</string>
+    <string name="fhome_tv_fragment_name_str">HomeFragment</string>
+    <string name="fhome_tv_list_unavailable_str">데이터가 없습니다.</string>
+    <string name="fhome_tv_title_part_str">부위</string>
+    <string name="fhome_tv_title_name_str">이름</string>
+    <string name="fhome_tv_title_mass_str">중량</string>
+    <string name="fhome_tv_title_rep_str">횟수</string>
+    <string name="fhome_tv_title_set_str">세트</string>
+    <string name="fhome_tv_title_interval_str">휴식</string>
 
-    <string name="fAddition_title_addition_txv">추가화면</string>
-    <string name="fAddition_title_edit_txv">편집화면</string>
-    <string name="fAddition_part_txv">부위:</string>
-    <string name="fAddition_name_txv">이름:</string>
-    <string name="fAddition_name_hint_txv"><b>운동 이름</b></string>
-    <string name="fAddition_mass_txv">중량</string>
-    <string name="fAddition_mass_hint_txv">중량을 입력하세요(맨몸 운동은 0)</string>
-    <string name="fAddition_rep_txv">횟수</string>
-    <string name="fAddition_rep_hint_txv">횟수를 입력하세요</string>
-    <string name="fAddition_set_txv">세트</string>
-    <string name="fAddition_set_hint_txv">운동 세트 수를 입력하세요</string>
-    <string name="fAddition_interval_txv">휴식</string>
-    <string name="fAddition_interval_hint_txv">운동간 휴식 시간을 입력하세요</string>
+    <string name="faddition_tv_title_addition_str">추가화면</string>
+    <string name="faddition_tv_title_edit_str">편집화면</string>
+    <string name="faddition_tv_part_str">부위:</string>
+    <string name="faddition_tv_name_str">이름:</string>
+    <string name="faddition_tv_name_hint_str"><b>운동 이름</b></string>
+    <string name="faddition_tv_mass_str">중량</string>
+    <string name="faddition_tv_mass_hint_str">중량을 입력하세요(맨몸 운동은 0)</string>
+    <string name="faddition_tv_rep_str">횟수</string>
+    <string name="faddition_tv_rep_hint_str">횟수를 입력하세요</string>
+    <string name="faddition_tv_set_str">세트</string>
+    <string name="faddition_tv_set_hint_str">운동 세트 수를 입력하세요</string>
+    <string name="faddition_tv_interval_str">휴식</string>
+    <string name="faddition_tv_interval_hint_str">운동간 휴식 시간을 입력하세요</string>
 
-    <string name="dRemove_remove_txv">이 운동을 지우시겠습니까?</string>
-    <string name="dRemove_confirm_txv">확인</string>
-    <string name="dRemove_cancel_txv">취소</string>
+    <string name="dremove_tv_main_str">이 운동을 지우시겠습니까?</string>
+    <string name="dremove_tv_confirm_str">확인</string>
+    <string name="dremove_tv_cancel_str">취소</string>
 
-    <string name="dProfile_height_txv">키</string>
-    <string name="dProfile_height_hint_txv">키(cm)</string>
-    <string name="dProfile_weight_txv">몸무게</string>
-    <string name="dProfile_weight_hint_txv">몸무게(kg)</string>
-    <string name="dProfile_confirm_txv">확인</string>
-    <string name="dProfile_tv_regex">키랑 몸무게를 다시 입력해주세요</string>
+    <string name="dprofile_tv_height_str">키</string>
+    <string name="dprofile_tv_height_hint_str">키(cm)</string>
+    <string name="dprofile_tv_weight_str">몸무게</string>
+    <string name="dprofile_tv_weight_hint_str">몸무게(kg)</string>
+    <string name="dprofile_tv_confirm_str">확인</string>
+    <string name="dprofile_tv_regex_str">키랑 몸무게를 다시 입력해주세요</string>
 
-    <string name="dGiveUp_give_up_txv">이 운동을 포기하시겠습니까?</string>
-    <string name="dGiveUp_confirm_txv">확인</string>
-    <string name="dGiveUp_cancel_txv">취소</string>
-    <string name="dGiveUpAll_tv_give_up">모든 운동을 포기하시겠습니까?</string>
+    <string name="dgiveup_tv_give_up_str">이 운동을 포기하시겠습니까?</string>
+    <string name="dgiveup_tv_confirm_str">확인</string>
+    <string name="dgiveup_tv_cancel_str">취소</string>
+    <string name="dgiveupAll_tv_give_up">모든 운동을 포기하시겠습니까?</string>
+    <!--
+        <string name="fplaypopup_continue_btn_str">Continue</string>
+        <string name="fplaypopup_title_checkbox_str">여부</string>
+        <string name="fplaypopup_list_unavailable">데이터가 없습니다.</string>
+        <string name="fplaypopup_timer_str">Timer</string>
+        <string name="fplaypopup_set_str">%d\/%dset</string>
+        <string name="fplaypopup_ts_playlist_not_exist">재생 목록이 없습니다.</string>
+        <string name="fplaypopup_ts_exercise_finish">운동이 완료 되었습니다.</string>
 
-    <string name="fPlayPopup_continue_btn_txv">Continue</string>
-    <string name="fPlayPopup_title_checkbox_txv">여부</string>
-    <string name="fPlayPopup_list_unavailable">데이터가 없습니다.</string>
-    <string name="fPlayPopup_timer_txv">Timer</string>
-    <string name="fPlayPopup_set_txv">%d\/%dset</string>
-    <string name="fPlayPopup_ts_playlist_not_exist">재생 목록이 없습니다.</string>
-    <string name="fPlayPopup_ts_exercise_finish">운동이 완료 되었습니다.</string>
+        <string name="fplaypopup_exercise_name_str">운동이름</string>
+        <string name="fplaypopup_mass_unit">Kg</string>
+        <string name="fplaypopup_slash">/</string>
+        <string name="fplaypopup_set_unit">Set</string>
+        <string name="fplaypopup_btn_plus_str">+10초</string>
+        <string name="fplaypopup_sec_unit">초</string>
+        <string name="fplaypopup_plus_unit">+</string>
+    -->
+        <string name="rh_mass">%dkg</string>
+        <string name="rh_height">%dcm</string>
+        <string name="rh_set">%dset</string>
+        <string name="rh_interval">%ds</string>
+        <string name="rh_rate">%d%%</string>
+        <string name="fhistory_detail_set">%d 세트</string>
+        <string name="fhistory_detail_rep">%d 회</string>
 
-    <string name="fPlayPopup_exercise_name_txv">운동이름</string>
-    <string name="fPlayPopup_mass_unit">Kg</string>
-    <string name="fPlayPopup_slash">/</string>
-    <string name="fPlayPopup_set_unit">Set</string>
-    <string name="fPlayPopup_btn_plus_txv">+10초</string>
-    <string name="fPlayPopup_sec_unit">초</string>
-    <string name="fPlayPopup_plus_unit">+</string>
+        <string name="foption_tv_profile_str">프로필</string>
+        <string name="foption_tv_mode_str">야간 모드</string>
+        <string name="foption_tv_weight_str">몸무게</string>
+        <string name="foption_tv_height_str">키</string>
+        <string name="foption_tv_interval_str">휴식 시간</string>
+        <string name="foption_tv_language_str">언어</string>
+        <string name="foption_tv_korean_str">한국어</string>
+        <string name="foption_tv_english_str">English</string>
+        <string name="foption_tv_supportUs_str">SUPPORT US</string>
+        <string name="foption_tv_rateUs_str">평점주기</string>
+        <string name="foption_tv_feedback_str">피드백</string>
+        <string name="foption_tv_share_str">공유</string>
 
-    <string name="rh_mass">%dkg</string>
-    <string name="rh_height">%dcm</string>
-    <string name="rh_set">%dset</string>
-    <string name="rh_interval">%ds</string>
-    <string name="rh_rate">%d%%</string>
-    <string name="fHistory_detail_set">%d 세트</string>
-    <string name="fHistory_detail_rep">%d 회</string>
+        <string name="fhistory_tv_profile_str">프로필</string>
+        <string name="fhistory_tv_report_str">리포트</string>
+        <string name="fhistory_tv_total_str">전체 기록</string>
+        <string name="unit_weight">%.1f kg</string>
+        <string name="unit_height">%.1f cm</string>
+        <string name="unit_time_min_sec">%02d:%02d</string>
+        <string name="unit_sets">%d 세트</string>
+        <string name="unit_time_hour_min">%02d시간 %02d분</string>
+        <string name="unit_percentage">%d%%</string>
 
-    <string name="fOption_txv_profile">프로필</string>
-    <string name="fOption_txv_mode">야간 모드</string>
-    <string name="fOption_txv_weight">몸무게</string>
-    <string name="fOption_txv_height">키</string>
-    <string name="fOption_txv_interval">휴식 시간</string>
-    <string name="fOption_txv_language">언어</string>
-    <string name="fOption_txv_korean">한국어</string>
-    <string name="fOption_txv_english">English</string>
-    <string name="fOption_txv_supportUs">SUPPORT US</string>
-    <string name="fOption_txv_rateUs">평점주기</string>
-    <string name="fOption_txv_feedback">피드백</string>
-    <string name="fOption_txv_share">공유</string>
+        <string name="dgiveup_tv_main_str">이 운동을 포기하시겠습니까?</string>
+        <string name="dgiveupall_tv_main_str">모든 운동을 포기하시겠습니까?</string>
+        <string name="fplaypopup_tv_btn_plus_str">+10초</string>
+        <string name="fplaypopup_tv_exercise_finish_str">운동이 완료 되었습니다.</string>
+        <string name="fplaypopup_tv_exercise_name_str">운동이름</string>
+        <string name="fplaypopup_tv_list_unavailable_str">데이터가 없습니다.</string>
+        <string name="fplaypopup_tv_playlist_not_exist_str">재생 목록이 없습니다.</string>
+        <string name="fplaypopup_tv_slash_str">/</string>
+        <string name="fplaypopup_tv_unit_mass_str">Kg</string>
+        <string name="fplaypopup_tv_unit_set_str">Set</string>
 
-    <string name="fHistory_txv_profile">프로필</string>
-    <string name="fHistory_txv_report">리포트</string>
-    <string name="fHistory_txv_total">전체 기록</string>
-    <string name="unit_weight">%d kg</string>
-    <string name="unit_height">%.1f cm</string>
-    <string name="unit_time_min_sec">%02d:%02d</string>
-    <string name="unit_sets">%d 세트</string>
-    <string name="unit_time_hour_min">%02d시간 %02d분</string>
-
-</resources>
+        <string name="rvexerciseitem_tv_unit_mass_str">%dkg</string>
+        <string name="rvexerciseitem_tv_unit_set_str">%dset</string>
+        <string name="rvexerciseitem_tv_unit_slash_str">/</string>
+    <string name="stimer_tv_main_str">Pacemaker 어플이 실행 중입니다.</string>
+    </resources>
