--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -67,7 +67,7 @@
 
     <string name="fplaypopup_tv_exercise_name_str">Exercise Name</string>
     <string name="fplaypopup_tv_unit_mass_str">Kg</string>
-    <string name="fplaypopup_tv_unit_set_str">Set</string>
+    <string name="fplaypopup_tv_unit_rep_str">Rep</string>
 
 
     <string name="rh_mass">%dkg</string>
@@ -75,7 +75,6 @@
     <string name="rh_set">%dset</string>
     <string name="rh_interval">%ds</string>
     <string name="rh_rate">%d%%</string>
-
 
 
     <string name="fhistory_detail_set">%d Sets</string>
@@ -111,7 +110,7 @@
     <string name="fplaypopup_tv_exercise_finish_str">Completed today\'s session</string>
     <string name="fplaypopup_tv_playlist_not_exist_str">No list</string>
     <string name="fplaypopup_tv_slash_str">/</string>
-    <string name="stimer_tv_main_str">PaceMarker is running.</string>
 
+    <string name="stimer_tv_main_str">PaceMarker is running.</string>
 
 </resources>
