--- a/Pacemaker/app/src/main/res/values/strings.xml
+++ b/Pacemaker/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     <string name="faddition_tv_exercise_name_default_shoulder">Shoulder</string>
 
     <string name="dremove_tv_main_str">Delete this one?</string>
-    <string name="dremove_tv_confirm_str">Yes</string>1
+    <string name="dremove_tv_confirm_str">Yes</string>
     <string name="dremove_tv_cancel_str">No</string>
 
     <string name="dprofile_tv_height_str">Height</string>
